[gd_scene load_steps=22 format=3 uid="uid://dhoe1ds3idav0"]

[ext_resource type="Script" path="res://world/counting_world.gd" id="1_ugvj7"]
[ext_resource type="Texture2D" uid="uid://dd83j1lu00b36" path="res://world/assets/Mushroom_Tower_Bottom_SVG_Test.svg" id="3_uol80"]
[ext_resource type="Texture2D" uid="uid://cfx56hp06tgvm" path="res://world/assets/Slugworm_Test_SVG.svg" id="4_jy5qk"]
[ext_resource type="Texture2D" uid="uid://cautpopjcugqv" path="res://world/assets/biclops.svg" id="6_b2yjb"]
[ext_resource type="Texture2D" uid="uid://ciy0in11afkgn" path="res://world/assets/cyclops.svg" id="7_8t41n"]
[ext_resource type="Texture2D" uid="uid://bu7khc8s7l80v" path="res://world/assets/stack guy 2.svg" id="8_p3ulf"]
[ext_resource type="Texture2D" uid="uid://dp8ileu4lg0jw" path="res://world/assets/Stack guy 1.svg" id="9_mfnxp"]
[ext_resource type="Texture2D" uid="uid://d1xclm0a7djqe" path="res://world/assets/red facility.svg" id="10_yaxrg"]
[ext_resource type="Texture2D" uid="uid://wn1ubnswrfox" path="res://world/assets/blue guy.svg" id="11_nr4lx"]
[ext_resource type="PackedScene" uid="uid://dltiiq845ae1o" path="res://minigames/generics/MenuBar.tscn" id="12_khj6s"]
[ext_resource type="Texture2D" uid="uid://c18l1k1og5iit" path="res://world/assets/bear.svg" id="13_m36cf"]
[ext_resource type="Texture2D" uid="uid://7ouhc76mcs01" path="res://world/assets/road.svg" id="14_x5dn0"]
[ext_resource type="PackedScene" uid="uid://cxo3k3r8250ry" path="res://world/minigame_structure.tscn" id="15_fav1c"]
[ext_resource type="Texture2D" uid="uid://ces5gd0nx146s" path="res://world/assets/tree4.svg" id="16_lqehr"]
[ext_resource type="Texture2D" uid="uid://b5q883ljisn5x" path="res://world/assets/tree2.svg" id="17_1cvup"]
[ext_resource type="Texture2D" uid="uid://dd30dt1ccpaos" path="res://world/assets/planet6.png" id="18_456v0"]
[ext_resource type="PackedScene" uid="uid://dbk0lrs3vdn38" path="res://world/building.tscn" id="19_der6q"]
[ext_resource type="Script" path="res://world/building.gd" id="19_hp7a5"]
[ext_resource type="Script" path="res://world/minigame_structure.gd" id="20_3uih5"]
[ext_resource type="Texture2D" uid="uid://t35mnayhnlfl" path="res://world/assets/Button_2.png" id="20_ic551"]
[ext_resource type="Theme" uid="uid://cad5kstqpvlfe" path="res://assets/themes/default/default.tres" id="21_mhihp"]

[node name="counting_world" type="Node2D"]
script = ExtResource("1_ugvj7")

[node name="MenuBar" parent="." instance=ExtResource("12_khj6s")]

[node name="DevelopmentBoard" type="TextureButton" parent="."]
offset_left = 1729.0
offset_top = 973.0
offset_right = 2972.0
offset_bottom = 1677.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("20_ic551")

[node name="Amount0To9" parent="." instance=ExtResource("19_der6q")]
offset_left = 645.0
offset_top = 711.0
offset_right = 1259.0
offset_bottom = 1129.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("4_jy5qk")
minigame = "amount_0_to_9"
world_part = "counting"

[node name="NumberMatch" parent="." instance=ExtResource("19_der6q")]
offset_left = 687.0
offset_top = 799.0
offset_right = 1170.0
offset_bottom = 1526.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("6_b2yjb")
flip_h = true
minigame = "match_0_to_9"
world_part = "counting"

[node name="NumberCatch" parent="." instance=ExtResource("19_der6q")]
offset_left = 902.0
offset_top = 748.0
offset_right = 2153.0
offset_bottom = 2117.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("7_8t41n")
minigame = "number_catch_0_to_9"
world_part = "counting"

[node name="Amount0To50" parent="." instance=ExtResource("19_der6q")]
offset_left = 780.0
offset_top = 361.0
offset_right = 984.0
offset_bottom = 625.0
texture_normal = ExtResource("8_p3ulf")
minigame = "amount_0_to_50"
world_part = "counting"

[node name="MakeAmounts1To999" parent="." instance=ExtResource("19_der6q")]
offset_left = 1660.0
offset_top = 682.0
offset_right = 1867.0
offset_bottom = 946.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("9_mfnxp")
minigame = "make_amounts_1_to_999"
world_part = "counting"

[node name="Amount50To999" parent="." instance=ExtResource("19_der6q")]
offset_left = 1511.0
offset_top = 419.0
offset_right = 1869.0
offset_bottom = 909.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("3_uol80")
minigame = "amount_50_to_999"
world_part = "counting"

[node name="NumLine0To9" parent="." instance=ExtResource("19_der6q")]
offset_left = 15.0
offset_top = 409.0
offset_right = 1210.0
offset_bottom = 1765.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("10_yaxrg")
flip_h = true
flip_v = true
minigame = "num_line_0_to_9"
world_part = "counting"

[node name="FallingNumbers0To9" parent="." instance=ExtResource("19_der6q")]
offset_left = 106.0
offset_top = 52.0
offset_right = 1308.0
offset_bottom = 1194.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("11_nr4lx")
flip_h = true
minigame = "falling_numbers_0_to_9"
world_part = "counting"

[node name="NumberBridge0To9" parent="." instance=ExtResource("19_der6q")]
offset_left = 328.0
offset_top = 163.0
offset_right = 822.0
offset_bottom = 781.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("13_m36cf")
flip_h = true
minigame = "number_bridge_0_to_9"
world_part = "counting"

[node name="Roads" type="Sprite2D" parent="."]
scale = Vector2(0.27, 0.27)
texture = ExtResource("14_x5dn0")
centered = false
offset = Vector2(100, 200)

[node name="Snake1To50" parent="." instance=ExtResource("15_fav1c")]
offset_left = 1028.0
offset_top = 308.0
offset_right = 1108.0
offset_bottom = 533.0
texture_normal = ExtResource("16_lqehr")

[node name="MakeAmounts1To50" parent="." instance=ExtResource("15_fav1c")]
offset_left = 1048.0
offset_top = 452.0
offset_right = 1152.0
offset_bottom = 678.0
texture_normal = ExtResource("17_1cvup")

[node name="NumberLine10To100" type="TextureButton" parent="."]
offset_left = 564.0
offset_top = 61.0
offset_right = 1039.0
offset_bottom = 526.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("18_456v0")
script = ExtResource("19_hp7a5")
minigame = "num_line_10_to_100"
world_part = "counting"

[node name="RunHill0To100" type="TextureButton" parent="."]
offset_left = 871.0
offset_top = 71.0
offset_right = 1346.0
offset_bottom = 536.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("18_456v0")
script = ExtResource("20_3uih5")

[node name="ShowAllGames" type="Button" parent="."]
offset_left = 1822.0
offset_top = 4.0
offset_right = 1911.0
offset_bottom = 35.0
theme = ExtResource("21_mhihp")
text = "SHOW ALL"

[node name="Button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
scale = Vector2(1.4, 1.4)
theme = ExtResource("21_mhihp")
theme_override_font_sizes/font_size = 12
text = "SMARTBOARD"
